@@ -122,6 +122,7 @@ We'll add it back when project opening functionality is working.
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-exports org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
@@ -137,6 +138,7 @@ We'll add it back when project opening functionality is working.
                         --add-opens javafx.base/javafx.beans=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-opens org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
@@ -213,6 +215,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
@@ -234,6 +238,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-opens</option>
@@ -289,6 +295,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
@@ -310,6 +318,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-opens</option>
